# fair-dash

./: .gitignore  CITATION.cff  config.toml  index.html  main.py  pyproject.toml  readme.md
.github/workflows/: pages.yaml
public/: style.css
web/: macros.jinja2  page.jinja2
