[tool.poetry]
name = "is-it-fair"
version = "0.1.0"
description = ""
authors = ["Donatas RasiukeviÄius <donatas@rasiukevicius.dev>"]
readme = "readme.md"
packages = [{include = "is_it_fair"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
